syntax = "proto3";

package service_account;

message ErrorCode {
    int32 code = 1;
    string message = 2;
}

message SignInReq {
    string username = 1;
    string password = 2;
}
message SignInResp {
    ErrorCode error_code = 1;
    string token = 2;
}

message VerifyTokenReq {
    string token = 1;
}
message VerifyTokenResp {
    ErrorCode error_code = 1;
}

service AccountService {
    rpc SignIn(SignInReq) returns (SignInResp);
    rpc VerifyToken(VerifyTokenReq) returns (VerifyTokenResp);
}
